# ai-agents-portfolio

./: .env.example  .gitignore  CODE_SAMPLE.md  OPENCLAW_CODE_SAMPLE.html  README.md  pyproject.toml
examples/: csv_input.json  interview_input.json  research_input.json
src/ai_agents_portfolio/: app.py  cli.py  config.py  llm.py  registry.py  schemas.py
src/ai_agents_portfolio/agents/: __init__.py  base.py  csv_insight.py  interview_coach.py  research_brief.py
tests/: test_agents.py
